--- a/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
@@ -15,13 +15,13 @@
       <a href="/all" class="nav-link" >Catalogue</a>
     </li>
     <li class="nav-item">
-      <a href="/home/about"   class="nav-link" >Locations</a>
+      <a href="/locations"   class="nav-link" >Locations</a>
     </li>
     <li class="nav-item">
-      <a href="/home/about"   class="nav-link" >Reviews</a>
+      <a href="/reviews"   class="nav-link" >Reviews</a>
     </li>
     <li class="nav-item">
-      <a href="/home/about"   class="nav-link" >About Us</a>
+      <a href="/about"   class="nav-link" >About Us</a>
     </li>
 
   </ul>
