--- a/src/main/resources/frontend/dealership-app/src/app/listing/listing-all/listing-all.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/listing/listing-all/listing-all.component.html
@@ -6,7 +6,7 @@
 
 <div id="container" class="container">
   <app-listing-item *ngFor="let car of cars | filter:searchText" [car] = "car"></app-listing-item>
-  <section *ngIf="cars.length === 0" class="no-content">
+  <section *ngIf="cars?.length === 0" class="no-content">
     <h1>No listings at the moment!</h1>
     <h2>Please check again later!</h2>
   </section>
